--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+div,
+button,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span,
+a {
+	font-family: 'Inter', sans-serif;
+}
