--- a/src/app/app.module.css
+++ b/src/app/app.module.css
@@ -1,1 +1,9 @@
 /* Your styles goes here. */
+
+.wrapper {
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	padding-top: 50vh;
+}
